--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_self_audit_custom_camera.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_self_audit_custom_camera.xml
@@ -35,119 +35,10 @@
                 android:id="@+id/imageViewCapturedImgProgress"
                 android:layout_width="388px"
                 android:layout_height="28px"
-                android:src="@drawable/self_audit_progress_bar"
+                android:src="@drawable/progress_front"
                 android:tag="mwar"/>
 
         </RelativeLayout>
-
-
-        <LinearLayout
-            android:id="@+id/linearLayoutProgressBar"
-            android:layout_width="388px"
-            android:layout_height="28px"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="14px"
-            android:layout_marginTop="18.5px"
-            android:orientation="horizontal"
-            android:tag="mwar">
-
-
-            <ImageView
-                android:id="@+id/imageViewCapturedImg1Progress"
-                android:layout_width="24px"
-                android:layout_height="24px"
-                android:layout_marginLeft="1.5px"
-                android:layout_marginTop="1.5px"
-                android:src="@drawable/green_circle"
-                android:tag="mwar"/>
-
-            <ImageView
-                android:id="@+id/imageViewCapturedImg2Progress"
-                android:layout_width="89.5px"
-                android:layout_marginTop="1px"
-                android:tag="mwar"
-                android:layout_height="wrap_content"/>
-
-            <ImageView
-                android:id="@+id/imageViewCapturedImg3Progress"
-                android:layout_marginTop="1px"
-                android:layout_width="89.5px"
-                android:tag="mwar"
-                android:layout_height="wrap_content"/>
-
-            <ImageView
-                android:id="@+id/imageViewCapturedImg4Progress"
-                android:layout_marginTop="1px"
-                android:layout_width="89.5px"
-                android:tag="mwar"
-                android:layout_height="wrap_content"/>
-
-            <ImageView
-                android:id="@+id/imageViewCapturedImg5Progress"
-                android:layout_marginTop="1px"
-                android:layout_width="89.5px"
-                android:tag="mwar"
-                android:layout_height="wrap_content"/>
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/relativeLayoutProgressBarText"
-            android:layout_width="388px"
-            android:layout_height="29px"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="14px"
-            android:layout_marginTop="17px"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textViewCapturedImg1Progress"
-                android:text="1"
-                android:textSize="26px"
-                android:layout_marginLeft="6px"
-                android:textColor="@color/white"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <TextView
-                android:id="@+id/textViewCapturedImg2Progress"
-                android:text="2"
-                android:textSize="26px"
-                android:layout_marginLeft="76px"
-                android:textColor="@color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <TextView
-                android:id="@+id/textViewCapturedImg3Progress"
-                android:text="3"
-                android:textSize="26px"
-                android:layout_marginLeft="75px"
-                android:textColor="@color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <TextView
-                android:id="@+id/textViewCapturedImg4Progress"
-                android:text="4"
-                android:textSize="26px"
-                android:layout_marginLeft="74px"
-                android:textColor="@color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <TextView
-                android:id="@+id/textViewCapturedImg5Progress"
-                android:text="5"
-                android:textSize="26px"
-                android:layout_marginLeft="74.5px"
-                android:textColor="@color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-
-        </LinearLayout>
 
 
         <TextView
