--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_select_audit.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_select_audit.xml
@@ -35,7 +35,7 @@
     </RelativeLayout>
 
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/linearLayoutSelfAudit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -48,6 +48,7 @@
             android:layout_width="617px"
             android:layout_height="wrap_content"
             android:textSize="35px"
+            android:layout_marginLeft="32px"
             android:text="@string/self_audit_caps"
             android:textColor="@color/new_orange"/>
 
@@ -56,6 +57,8 @@
             android:layout_width="617px"
             android:layout_height="wrap_content"
             android:text="@string/NA"
+            android:layout_marginLeft="32px"
+            android:layout_below="@+id/textViewSelfAudit"
             android:textSize="30px"
             android:layout_marginTop="28px"/>
 
@@ -64,6 +67,8 @@
             android:layout_width="617px"
             android:layout_height="wrap_content"
             android:text="@string/NA"
+            android:layout_marginLeft="32px"
+            android:layout_below="@+id/textViewSelfAuditLast"
             android:textSize="30px"
             android:layout_marginTop="17px"/>
 
@@ -72,24 +77,35 @@
             android:layout_width="617px"
             android:layout_height="wrap_content"
             android:text="@string/NA"
+            android:layout_marginLeft="32px"
             android:textSize="30px"
+            android:layout_below="@+id/textViewSelfAuditNext"
             android:layout_marginTop="19px"/>
         
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="4px"
             android:layout_marginTop="52px"
+            android:layout_below="@+id/textViewSelfAuditStatus"
             android:textSize="30px"
             android:src="@drawable/shadow_down"/>
 
-    </LinearLayout>
+        <ImageView
+            android:layout_width="12px"
+            android:layout_height="20px"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="60px"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/audit_next_arrow"/>
 
-    <LinearLayout
+    </RelativeLayout>
+
+    <RelativeLayout
         android:id="@+id/linearLayoutNJAutoBranding"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_marginTop="52px"
         android:orientation="vertical">
 
@@ -97,13 +113,16 @@
             android:id="@+id/textViewNJAutoBranding"
             android:layout_width="617px"
             android:textSize="35px"
+            android:layout_marginLeft="32px"
             android:layout_height="wrap_content"
             android:text="@string/non_jugnoo_auto_branding"
             android:textColor="@color/new_orange"/>
 
         <TextView
             android:id="@+id/textViewNJBOffer"
+            android:layout_below="@+id/textViewNJAutoBranding"
             android:layout_width="617px"
+            android:layout_marginLeft="32px"
             android:layout_height="wrap_content"
             android:text="@string/NA"
             android:textSize="30px"
@@ -111,7 +130,9 @@
 
         <TextView
             android:id="@+id/textViewNJBNumber"
+            android:layout_below="@+id/textViewNJBOffer"
             android:layout_width="617px"
+            android:layout_marginLeft="32px"
             android:layout_height="wrap_content"
             android:text="@string/NA"
             android:textSize="30px"
@@ -120,7 +141,9 @@
 
         <TextView
             android:id="@+id/textViewNJAutoBrandingStatus"
+            android:layout_below="@+id/textViewNJBNumber"
             android:layout_width="617px"
+            android:layout_marginLeft="32px"
             android:layout_height="wrap_content"
             android:text="@string/NA"
             android:textSize="30px"
@@ -129,18 +152,27 @@
 
         <ImageView
             android:layout_width="match_parent"
+            android:layout_below="@+id/textViewNJAutoBrandingStatus"
             android:layout_height="4px"
             android:layout_marginTop="52px"
             android:src="@drawable/shadow_down"/>
 
-    </LinearLayout>
+        <ImageView
+            android:layout_width="12px"
+            android:layout_height="20px"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="60px"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/audit_next_arrow"/>
 
-    <LinearLayout
+    </RelativeLayout>
+
+    <RelativeLayout
         android:id="@+id/linearLayoutNJAutoAudit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_marginTop="52px"
         android:orientation="vertical">
 
@@ -149,35 +181,50 @@
             android:layout_width="617px"
             android:layout_height="wrap_content"
             android:textSize="35px"
+            android:layout_marginLeft="32px"
             android:text="@string/non_jugnoo_auto_audit"
             android:textColor="@color/new_orange"/>
 
         <TextView
             android:id="@+id/textViewNJAOffer"
+            android:layout_below="@+id/textViewNJAutoAudit"
             android:layout_width="617px"
             android:layout_height="wrap_content"
             android:text="@string/NA"
             android:visibility="visible"
+            android:layout_marginLeft="32px"
             android:textSize="30px"
             android:layout_marginTop="25px"/>
 
         <TextView
             android:id="@+id/textViewNJANumber"
+            android:layout_below="@+id/textViewNJAOffer"
             android:layout_width="617px"
             android:layout_height="wrap_content"
             android:text="@string/NA"
             android:textSize="30px"
+            android:layout_marginLeft="32px"
             android:visibility="visible"
             android:layout_marginTop="19px"/>
 
         <TextView
             android:id="@+id/textViewNJAutoAuditStatus"
+            android:layout_below="@+id/textViewNJANumber"
             android:layout_width="617px"
             android:layout_height="wrap_content"
             android:text="@string/NA"
+            android:layout_marginLeft="32px"
             android:textSize="30px"
             android:layout_marginTop="28px"/>
 
-    </LinearLayout>
+        <ImageView
+            android:layout_width="12px"
+            android:layout_height="20px"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="60px"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/audit_next_arrow"/>
+
+    </RelativeLayout>
 
 </LinearLayout>
