--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_select_audit.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_select_audit.xml
@@ -91,11 +91,13 @@
             android:src="@drawable/shadow_down"/>
 
         <ImageView
+            android:id="@+id/imageViewArrowSA"
             android:layout_width="12px"
             android:layout_height="20px"
             android:layout_centerVertical="true"
             android:layout_marginRight="60px"
             android:layout_alignParentRight="true"
+            android:visibility="visible"
             android:src="@drawable/audit_next_arrow"/>
 
     </RelativeLayout>
@@ -158,6 +160,7 @@
             android:src="@drawable/shadow_down"/>
 
         <ImageView
+            android:id="@+id/imageViewArrowNJB"
             android:layout_width="12px"
             android:layout_height="20px"
             android:layout_centerVertical="true"
@@ -218,6 +221,7 @@
             android:layout_marginTop="28px"/>
 
         <ImageView
+            android:id="@+id/imageViewArrowNJA"
             android:layout_width="12px"
             android:layout_height="20px"
             android:layout_centerVertical="true"
