--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
@@ -71,8 +71,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="180px"
-            android:layout_marginLeft="50px"
-            android:layout_marginRight="50px"
+            android:layout_marginLeft="40px"
+            android:layout_marginRight="40px"
             android:gravity="center_vertical">
 
             <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
@@ -86,7 +86,7 @@
             <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
                 android:id="@+id/textViewPickupChargesperkm"
                 android:layout_toRightOf="@+id/textViewPickupCharges"
-                android:layout_width="wrap_content"
+                android:layout_width="140px"
                 android:layout_height="wrap_content"
                 android:text="@string/per_km"
                 android:textColor="@color/grey_dark_less"
@@ -254,7 +254,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="@string/per_km"
+                        android:text="@string/per_min"
                         android:textColor="@color/grey_dark_less"
                         android:textSize="34px"/>
 
